# simpleSocket

./: README.md
simpleTCP/client_IO/: MySocket.cpp  MySocket.h  MySocketClient.cpp  MySocketClient.h  MySocketRD.cpp  MySocketRD.h  MySocketWD.cpp  MySocketWD.h
simpleTCP/client_test/: CMakeLists.txt  main.cpp
simpleTCP/comment/: DataDef.h  Log.h  Mutex.cpp  Mutex.h  hashmap.cpp  hashmap.h  myFunc.cpp  myFunc.h  queuedata.h  win32Thread.cpp
simpleTCP/common/: Log.cpp  myThread.cpp  myThread.h  queuedata.h  win32Thread.h
simpleTCP/srv_IO/: MySocket.cpp  MySocket.h  MySocketPrivate.cpp  MySocketPrivate.h  MySocketRD.cpp  MySocketRD.h  MySocketSrv.cpp  MySocketSrv.h  MySocketWD.cpp  MySocketWD.h
simpleTCP/srv_test/: CMakeLists.txt  main.cpp
